# nlp-vietnamese-phd

./: .env.example  .gitignore  .gitmodules  README.md  check_sentence.ipynb  hello.py  improved_html_cleaner.py  ocr_image_processor.py  page_ocr_output.txt  parse_namhoakinh_anh.ipynb  parse_namhoakinh_donngu.ipynb  parse_namhoakinh_songngu.ipynb  pyproject.toml  test_huggingface.ipynb  test_ner.ipynb  test_ocr.ipynb
archive/: vietnamese_parser_simple.py
debug/: parse_nam_hoa_kinh.py  parse_namhoakinh_songngu.py  test.txt
result/: PAS_003_nam_hoa_kinh.xml
result/28_06/: PAS_003_Trang-tu-nam-hoa-kinh.xml  PAS_003_nam_hoa_kinh_anh.xml
result/29_06/: PAS_003_Trang-tu-nam-hoa-kinh_010.xml  PAS_003_Trang-tu-nam-hoa-kinh_011.xml  PAS_003_Trang-tu-nam-hoa-kinh_012.xml  PAS_003_nam_hoa_kinh_donngu_015.xml  PAS_003_nam_hoa_kinh_donngu_016.xml  PAS_003_nam_hoa_kinh_songngu_014.xml  PKS_001_nam_hoa_kinh_songngu_013.xml
src/: constants.py  extract_images_big.py  hf_ner.py  ocr_image_processor.py  test_paddle_ocr.py  translation.py  utils.py
src/ner/: base.py  huggingface.py  openai.py
static/: NOTE.md
