[project]
name = "nlp-vietnamese-phd"
version = "0.1.0"
description = "Building Vietnamese NLP dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "googletrans>=4.0.2",
    "ipykernel>=6.29.5",
    "numba>=0.61.2",
    "pymupdf>=1.26.1",
    "ruff>=0.12.1",
    "sentence-splitter>=1.4",
    "sentence-transformers>=4.1.0",
    "transformers>=4.53.0",
    "underthesea>=6.8.4",
]
